--- a/project-4-12/css/styles-3.css
+++ b/project-4-12/css/styles-3.css
@@ -462,7 +462,7 @@ h1{
 
 .category-container{
   display: grid;
-  grid-template-columns: 120px 120px 120px;
+  grid-template-columns: 180px 180px 180px;
   margin-left: 60px;
   margin-top: 30px;
 }
@@ -470,7 +470,7 @@ h1{
 .category-item{
   background-color:#636363;
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
-  width: 100px;
+  width: 130px;
   height: 50px;
   border-radius: 60%;
   border-radius: 31px;
@@ -488,6 +488,13 @@ h1{
   margin-top: 10px;
 }
 
+.category-item:hover{
+  /* color: #1A1A1A; */
+  background-color: rgb(0, 0, 0);
+  color: white;
+}
+
+
 #visualized{
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
   font-size: 30px;
@@ -499,6 +506,7 @@ h1{
   margin-right: 30px;
   margin-top: 80px;
   height: 37px;
+  color: white;
   /* color: rgb(255, 0, 0); */
 }
 
