--- a/project-4-12/css/styles-3.css
+++ b/project-4-12/css/styles-3.css
@@ -462,7 +462,7 @@ h1{
 
 .category-container{
   display: grid;
-  grid-template-columns: 180px 180px 180px;
+  grid-template-columns: 180px 180px 180px 180px 180px;
   margin-left: 60px;
   margin-top: 30px;
 }
@@ -470,7 +470,7 @@ h1{
 .category-item{
   background-color:#636363;
   /* border: 1px solid rgba(0, 0, 0, 0.8); */
-  width: 130px;
+  width: 150px;
   height: 50px;
   border-radius: 60%;
   border-radius: 31px;
