--- a/project-4-12/css/styles-3.css
+++ b/project-4-12/css/styles-3.css
@@ -212,7 +212,8 @@ h1{
   width: 100vw;
   left: 0px;
   /* top: 40vh; */
-  top:320px;
+  /* top:320px; */
+  top:330px;
   background-color: #D9D9D9;
   position: absolute;
 }
@@ -451,6 +452,7 @@ h1{
 
 #discography-text{
   margin-top: 50px;
+  margin-top: 95px;
   margin-left: 60px;
 
   font-style: normal;
