--- a/project-4-12/css/styles-3.css
+++ b/project-4-12/css/styles-3.css
@@ -175,25 +175,41 @@ body{
 
 h1{
   /* font-family: Inter; */
-  font-size: 106px;
-  /* font-size: 15vh; */
+  /* font-size: 106px; */
+  font-size: 12vh;
   font-weight: 700;
   line-height: 128px;
   letter-spacing: 0em;
   text-align: left;
   margin-left: 50px;
   padding: 0;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 0;
+  width: 1000px;
+}
+
+#verified-row{
+  display: grid;
+  grid-template-columns: 30px 300px;
+}
+
+#verified-image{
+  width: 30px;
+  height: auto;
+  display:inline-block;
+  margin-top: 53px;
+  margin-left: 50px;
+
 }
 
 #header-text-verified{
+  display:inline-block;
   font-size: 2.5vh;
   font-weight: 400;
   line-height: 24px;
   letter-spacing: 0em;
   text-align: left;
-  margin-left: 50px;
+  margin-left: 70px;
   margin-top: 55px;
 }
 
