--- a/project-4-12/project-4-10-macro-happiness/css/styles.css
+++ b/project-4-12/project-4-10-macro-happiness/css/styles.css
@@ -58,7 +58,7 @@ body{
   color: white;
   font-size: 20px;
   text-align: center;
-  font-family: 'Roboto Mono', monospace;
+  font-family: Arial, Helvetica, sans-serif;
   margin-top: 10vh;
   left: 50vw;
   /* position: absolute; */
@@ -67,7 +67,7 @@ body{
   color: white;
   font-size: 20px;
   /* text-align: center; */
-  font-family: 'Roboto Mono', monospace;
+  font-family: Arial, Helvetica, sans-serif;
   /* margin-top: 10vh; */
   margin-left: 5%;
   writing-mode: vertical-lr;
