--- a/project-4-12/project-4-8/css/styles.css
+++ b/project-4-12/project-4-8/css/styles.css
@@ -118,7 +118,7 @@ body{
   margin-left: auto;
   margin-right: auto;
   margin-top: 205px;
-  font-family: 'Roboto Mono', monospace;;
+  font-family: Arial, Helvetica, sans-serif;
 }
   
 
